--- a/haskell-first-steps.cabal
+++ b/haskell-first-steps.cabal
@@ -29,7 +29,7 @@ library
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:    base ^>=4.14.3.0
+    build-depends:    base ^>=4.14.3.0, containers
     hs-source-dirs:   src
     default-language: Haskell2010
 
@@ -43,6 +43,7 @@ executable haskell-first-steps
     -- other-extensions:
     build-depends:
         base ^>=4.14.3.0,
+        containers,
         haskell-first-steps
 
     hs-source-dirs:   app
