--- a/haskell-first-steps.cabal
+++ b/haskell-first-steps.cabal
@@ -22,7 +22,7 @@ maintainer:         git@pierrefhapp.dev
 extra-source-files: CHANGELOG.md
 
 library
-    exposed-modules:  FirstSteps CodeBaseLibrary Geometry.Cube Geometry.Cuboid
+    exposed-modules:  FirstSteps CodeBaseLibrary Geometry.Cube Geometry.Cuboid RecursiveDataStructures Typeclasses
 
     -- Modules included in this library but not exported.
     -- other-modules:
