--- a/haskell-first-steps.cabal
+++ b/haskell-first-steps.cabal
@@ -29,7 +29,7 @@ library
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:    base ^>=4.14.3.0, containers
+    build-depends:    base ^>=4.14.3.0, containers, random
     hs-source-dirs:   src
     default-language: Haskell2010
 
@@ -44,6 +44,7 @@ executable haskell-first-steps
     build-depends:
         base ^>=4.14.3.0,
         containers,
+        random,
         haskell-first-steps
 
     hs-source-dirs:   app
