--- a/haskell-first-steps.cabal
+++ b/haskell-first-steps.cabal
@@ -29,7 +29,7 @@ library
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:    base ^>=4.14.3.0, containers, random
+    build-depends:    base ^>=4.14.3.0, containers, random, bytestring
     hs-source-dirs:   src
     default-language: Haskell2010
 
@@ -45,6 +45,7 @@ executable haskell-first-steps
         base ^>=4.14.3.0,
         containers,
         random,
+        bytestring,
         haskell-first-steps
 
     hs-source-dirs:   app
