1h30min of uninstall and install etc.. and more and more bugs encoutering with ghcup, ghci i just installed ghc from ubuntu repository and I am going with 8.0.2 now. Just trying to finish the book.

--- a/haskell-first-steps.cabal
+++ b/haskell-first-steps.cabal
@@ -22,7 +22,7 @@ maintainer:         git@pierrefhapp.dev
 extra-source-files: CHANGELOG.md
 
 library
-    exposed-modules:  FirstSteps CodeBaseLibrary Geometry.Cube Geometry.Cuboid RecursiveDataStructures Typeclasses
+    exposed-modules:  FirstSteps CodeBaseLibrary Geometry.Cube Geometry.Cuboid RecursiveDataStructures Typeclasses Bytestrings
 
     -- Modules included in this library but not exported.
     -- other-modules:
